feat (frontend): Creación de seccion de participantes. #9

--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Home from "../components/Home.astro";
+import Participants from "../components/Participants.astro";
 ---
 
 <html lang="es">
@@ -19,6 +20,9 @@ import Home from "../components/Home.astro";
     <main>
       <section id="home">
         <Home />
+      </section>
+      <section id="participants">
+        <Participants />
       </section>
     </main>
   </body>
