feat (frontend): Creación de seccion de votaciones. #11

--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro";
 import Home from "../components/Home.astro";
 import Participants from "../components/Participants.astro";
+import Voting from "../components/Voting.astro";
 ---
 
 <html lang="es">
@@ -23,6 +24,9 @@ import Participants from "../components/Participants.astro";
       </section>
       <section id="participants">
         <Participants />
+      </section>
+      <section id="voting">
+        <Voting />
       </section>
     </main>
   </body>
