feat (frontend): Creación de seccion de resultados #12

--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro";
 import Home from "../components/Home.astro";
 import Participants from "../components/Participants.astro";
 import Voting from "../components/Voting.astro";
+import Results from "../components/Results.astro";
 ---
 
 <html lang="es">
@@ -27,6 +28,9 @@ import Voting from "../components/Voting.astro";
       </section>
       <section id="voting">
         <Voting />
+      </section>
+      <section id="results">
+        <Results />
       </section>
     </main>
   </body>
