feat (desarrollo): Cambiadas funcionalidades para que funcionen con llamadas a la API #48

--- a/Frontend/src/components/ParticipantBack.astro
+++ b/Frontend/src/components/ParticipantBack.astro
@@ -1,9 +1,9 @@
 ---
-const { name, description } = Astro.props;
+const { userName, userDescription } = Astro.props;
 ---
 
-<h3 class="card-heading">{name}</h3>
-<p class="card-description">{description}</p>
+<h3 class="card-heading">{userName}</h3>
+<p class="card-description">{userDescription}</p>
 
 <style>
   .card-heading {
