test (ci-cd): Probando ci-cd cambiando frontend #83

--- a/Frontend/src/components/Home.astro
+++ b/Frontend/src/components/Home.astro
@@ -2,26 +2,23 @@
 
 <div class="content">
   <p class="text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus sapien
-    in augue accumsan, in eleifend nibh pulvinar. Aenean non tortor egestas,
-    vehicula mauris sed, semper orci. Nullam ac libero eget quam hendrerit
-    vulputate. Vivamus quis purus quis ligula dignissim scelerisque. Praesent
-    lacinia, lacus eget aliquam vestibulum, sapien eros pharetra sapien, at
-    pharetra purus sem euismod tellus. Orci varius natoque penatibus et magnis
-    dis parturient montes, nascetur ridiculus mus. Quisque vitae commodo tellus.
-    Curabitur sit amet mattis justo. Pellentesque porttitor semper nisl, ornare
-    imperdiet dui cursus id. Nulla facilisi. Morbi vitae condimentum nisl.
-    Curabitur pretium dapibus hendrerit. Nunc sodales, velit a iaculis placerat,
-    augue lectus euismod ipsum, at feugiat libero lacus vitae lacus. Quisque
-    sagittis iaculis sapien eu ullamcorper. Fusce vestibulum, nibh tincidunt
-    ullamcorper vehicula, justo ex bibendum tellus, nec pellentesque est sem eu
-    lacus. Aenean urna sem, fermentum eget porta ac, cursus ac magna.
-    Suspendisse at vulputate erat. Pellentesque ut hendrerit magna. Cras
-    ultrices, quam sed facilisis eleifend, quam massa euismod magna, vel mattis
-    risus neque eu libero. Donec at maximus nibh. Phasellus convallis elit eu
-    urna fermentum, id dapibus lectus tempor. Etiam ac porttitor ligula. Etiam
-    est enim, iaculis sed interdum nec, pulvinar in diam. Mauris id eros ut
-    dolor pharetra auctor nec vitae mi.
+    <strong>Operación Triunfo 2025</strong> es un programa de televisión español
+    de telerrealidad y concurso musical creado por la productora Gestmusic y emitido
+    por Televisión Española. El programa se basa en la formación de un grupo de jóvenes
+    cantantes que compiten entre sí para convertirse en el ganador del concurso.
+    La primera edición se emitió en 2001 y desde entonces ha tenido varias ediciones,
+    convirtiéndose en un fenómeno cultural en España. El formato del programa incluye
+    una academia donde los concursantes reciben formación musical y vocal, así como
+    clases de baile y expresión artística. Durante el programa, los concursantes
+    realizan actuaciones en vivo y son evaluados por un jurado compuesto por profesionales
+    de la música y la industria del entretenimiento. Además, el público tiene la
+    oportunidad de votar por sus concursantes favoritos, lo que influye en el resultado
+    de las eliminaciones y la selección del ganador. El ganador del concurso recibe
+    un contrato discográfico y la oportunidad de lanzar su carrera musical. A lo
+    largo de los años, Operación Triunfo ha lanzado numerosos álbumes y ha catapultado
+    a la fama a varios artistas que han participado en el programa, convirtiéndolo
+    en una plataforma importante para el descubrimiento de nuevos talentos en la
+    música española.
   </p>
   <img
     src="/OT2025.jpg"
