test (ci-cd): Probando ci-cd #83

--- a/Frontend/src/components/Home.astro
+++ b/Frontend/src/components/Home.astro
@@ -19,6 +19,15 @@
     a la fama a varios artistas que han participado en el programa, convirtiéndolo
     en una plataforma importante para el descubrimiento de nuevos talentos en la
     música española.
+    La edición de 2025 promete ser emocionante, con un nuevo grupo de talentosos
+    concursantes listos para demostrar su valía en el escenario. Los fans del
+    programa están ansiosos por ver quién se llevará el codiciado título de
+    ganador de Operación Triunfo 2025 y qué nuevas estrellas emergentes surgirán
+    de esta edición. Con un formato renovado y sorpresas inesperadas, esta
+    temporada promete ser una experiencia inolvidable tanto para los concursantes
+    como para los espectadores. La música, la emoción y la pasión por el arte
+    se unirán en un espectáculo que celebrará el talento y la creatividad de
+    la nueva generación de artistas. ¡No te lo pierdas!
   </p>
   <img
     src="/OT2025.jpg"
