--- a/Frontend/src/components/Home.astro
+++ b/Frontend/src/components/Home.astro
@@ -18,12 +18,7 @@
     largo de los años, Operación Triunfo ha lanzado numerosos álbumes y ha catapultado
     a la fama a varios artistas que han participado en el programa, convirtiéndolo
     en una plataforma importante para el descubrimiento de nuevos talentos en la
-    música española. La edición de 2025 promete ser emocionante, con un nuevo grupo
-    de talentosos concursantes listos para demostrar su valía en el escenario. Los
-    fans del programa están ansiosos por ver cómo se desarrolla la competencia y
-    quién se convertirá en el próximo gran artista de la música española. Con un
-    formato renovado y sorpresas en cada gala, Operación Triunfo 2025 promete ser
-    una experiencia inolvidable tanto para los concursantes como para los espectadores.
+    música española.
   </p>
   <img
     src="/OT2025.jpg"
